# AI-Chatbot

./: .gitignore  README.md  file.py  pyproject.toml
app/: chat_llm.py  config.py  database.py  file.py  main.py  schema.py  state.py
app/assets/: 조선비즈 요약형기사 중간보고서.docx  조선비즈 화제성 기사 생성 이슈사항.docx  참사 지원금 수령.docx
app/core/: chat_llm.py  database.py  file.py
assets/: kinu_question.txt  law_103962_20100331.json  김건희 도이치모터스.docx  랭체인과 프롬프트.pptx
frontend/: package-lock.json  package.json
frontend/src/: App.js  api.js
frontend/src/pages/: Chat.js  History.js  Home.js
study_file/: s_class.py  s_graph.py  s_nodes.py  s_pydantic.py  s_state.py
study_memo/: s_class.py  s_graph.py  s_inspect.py  s_kwargs.py  s_nodes.py  s_state.py
utils/: database.py  file.py
