[project]
name = "python-study"
version = "0.1.0"
description = ""
authors = [
    {name = "윤주연", email = "zoe4121@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-pptx (>=1.0.2,<2.0.0)", 
    "python-pdf (>=0.40,<0.41)", 
    "python-docx (>=1.1.2,<2.0.0)", 
    "fastapi (>=0.115.8,<0.116.0)", 
    "requests (>=2.32.3,<3.0.0)", 
    "fitz (>=0.0.1.dev2,<0.0.2)", 
    "pymupdf (>=1.25.2,<2.0.0)", 
    "uvicorn (>=0.34.0,<0.35.0)", 
    "python-dotenv (>=1.0.1,<2.0.0)", 
    "pydantic-settings (>=2.7.1,<3.0.0)", 
    "google-generativeai (>=0.8.4,<0.9.0)", 
    "psycopg2-binary (>=2.9.10,<3.0.0)", 
    "langgraph (>=0.2.45,<0.3.0)", 
    "pydantic (>=2.10.6,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "app" }] 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
